# doover-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: push_to_apt.yml
debian/: README.md  changelog  control  rules
doover/: Cargo.toml
doover-cli/: Cargo.toml  README.md
doover-cli/src/: device_agent.rs  main.rs  modbus.rs  parse.rs  platform.rs
doover-cli/tests/: cli_e2e.rs
doover-macros/: Cargo.toml
doover-macros/src/: lib.rs
doover-proto/: Cargo.toml  build.rs
doover-proto/proto/: device_agent.proto  health.proto  modbus_iface.proto
doover-proto/src/: lib.rs
doover/examples/: level_sensor.rs  load_smasher.rs
doover/src/: application.rs  channel_backend.rs  client.rs  config.rs  error.rs  events.rs  lib.rs  models.rs  platform.rs  rpc.rs  testing.rs
doover/src/api/: auth.rs  data.rs  mod.rs
doover/src/config/: export.rs  mod.rs  schema.rs
doover/src/docker/: application.rs  device_agent.rs  grpc.rs  healthcheck.rs  mod.rs  modbus.rs  platform.rs  subscriptions.rs
doover/src/processor/: application.rs  config.rs  events.rs  handler.rs  mod.rs  runner.rs  tags.rs
doover/src/tags/: handle.rs  mod.rs  runtime.rs  triggers.rs
doover/src/ui/: camera.rs  element.rs  interaction.rs  misc.rs  mod.rs  parameter.rs  runtime.rs  submodule.rs  value.rs  variable.rs
doover/src/utils/: diff.rs  mod.rs  snowflake.rs
doover/tests/: compat_fixtures.rs  config_golden.rs  data_client.rs  export_golden.rs  log_trigger_fixtures.rs  processor_pipeline.rs  processor_tags.rs  remote_tags.rs  runtime_integration.rs  tags_triggers.rs  ui_element_fixtures.rs  ui_golden.rs
doover/tests/common/: mod.rs
doover/tests/fixtures/: analog_level_sensor_app_config.json  analog_level_sensor_doover_config.json
scripts/: gen_compat_fixtures.py  gen_log_trigger_fixtures.py  gen_ui_element_fixtures.py
tests/compat/fixtures/: diffs.json  log_triggers.json  payload_validation.json  snowflakes.json  ui_elements.json
