[workspace]
resolver = "2"
members = ["doover-proto", "doover", "doover-macros", "doover-cli"]

[workspace.package]
edition = "2021"
version = "0.1.1"
license = "MIT"
repository = "https://github.com/getdoover/doover-rs"

[workspace.dependencies]
tonic = "0.13"
tonic-build = "0.13"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "time", "sync"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
# preserve_order keeps JSON object key order == Python dict insertion order,
# matching the agent's data_json bytes.
serde_json = { version = "1", features = ["preserve_order"] }
tracing = "0.1"

[profile.release]
lto = true
codegen-units = 1
