[package]
name = "doover-macros"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Derive macros (Config, ConfigObject, ConfigEnum) for the doover crate"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
