[package]
name = "doover"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Client library for writing Doover device applications in Rust"

[dependencies]
doover-proto = { path = "../doover-proto" }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
async-trait = "0.1"
thiserror = "2"

[dev-dependencies]
tracing-subscriber = "0.3"

[[example]]
name = "level_sensor"
path = "examples/level_sensor.rs"

[[example]]
name = "load_smasher"
path = "examples/load_smasher.rs"
