[package]
name = "doover"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Client library for writing Doover device applications in Rust"

[features]
default = ["macros"]
# The Config/ConfigObject/ConfigEnum derive macros.
macros = ["dep:doover-macros"]
# Async HTTP client for data.doover.com (`doover::api`). Kept out of the
# default set so device apps never pull reqwest into the scratch image.
cloud-api = ["dep:reqwest", "dep:flate2"]
# The AWS Lambda processor runtime (`doover::processor`).
processor = ["cloud-api", "dep:lambda_runtime", "dep:base64"]
# In-memory `MockBackend` for testing code written against `ChannelBackend`.
testing = []

[dependencies]
doover-proto = { path = "../doover-proto" }
doover-macros = { path = "../doover-macros", optional = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
async-trait = "0.1"
thiserror = "2"
# cloud-api: rustls only (no openssl — processors deploy as static Lambda
# binaries); gzip = response decompression; request compression is flate2.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "json"], optional = true }
flate2 = { version = "1", optional = true }
lambda_runtime = { version = "0.13", optional = true }
base64 = { version = "0.22", optional = true }

[dev-dependencies]
tracing-subscriber = "0.3"
wiremock = "0.6"
# for decompressing gzip request bodies in wiremock assertions
flate2 = "1"

[[test]]
name = "data_client"
required-features = ["cloud-api"]

[[test]]
name = "processor_pipeline"
required-features = ["processor", "testing"]

[[test]]
name = "processor_tags"
required-features = ["processor", "testing"]

[[example]]
name = "level_sensor"
path = "examples/level_sensor.rs"

[[example]]
name = "load_smasher"
path = "examples/load_smasher.rs"
